# cassio

./: .gitattributes  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
docs/: training-dataset-export-spec.md
src/: ast.rs  ast_test.rs  compact.rs  compact_test.rs  config.rs  config_test.rs  discover.rs  discover_test.rs  error.rs  git.rs  index.rs  index_test.rs  lib.rs  main.rs  main_tests.rs  pricing.rs  pricing_test.rs  redact.rs  redact_test.rs  search.rs  search_test.rs  summary.rs  summary_test.rs  training.rs
src/formatter/: emoji_text.rs  emoji_text_test.rs  jsonl.rs  jsonl_test.rs  mod.rs  mod_test.rs  training_json.rs
src/parser/: claude.rs  claude_test.rs  codex.rs  codex_test.rs  cursor.rs  cursor_test.rs  grok.rs  grok_test.rs  hermes.rs  hermes_test.rs  kimi.rs  kimi_test.rs  mod.rs  opencode.rs  opencode_test.rs  pi.rs  pi_test.rs
src/prompts/: compact.md  daily_merge.md  monthly.md  monthly_merge.md
tests/: hygiene.rs
