[package]
name = "cassio"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
dirs = "6"
toml = "0.8"
toml_edit = "0.22"
walkdir = "2"
