[package]
name = "cassio"
version = "0.8.2"
edition = "2024"
license = "MIT"
description = "Turn AI coding session logs into searchable transcripts"
repository = "https://github.com/ianzepp/cassio"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
dirs = "6"
toml = "0.8"
toml_edit = "0.22"
walkdir = "2"
ureq = { version = "3", features = ["json"] }
regex = "1"
sha2 = "0.10"
wait-timeout = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
